# DCS

./: C499Inputs.txt  CMakeCache.txt  CMakeLists.txt  Circuit.txt  DCS  DCS.cbp  Inputs.txt  Makefile  README.md  c432.txt  c432Inputs.txt  c499.txt  cmake_install.cmake  error.txt  main.cpp  output.txt
.github/workflows/: greetings.yml
libraries/graphs/: gateInfo.cpp  gateInfo.h  graphs.cpp  graphs.h  graphs_test.cpp  graphs_test.h
libraries/logicgates/: logicgates.cpp  logicgates.h  logicgates_test.cpp  logicgates_test.h
libraries/parser/: log.cpp  log.h  log_test.cpp  log_test.h  parser.cpp  parser.h  parser_test.cpp  parser_test.h
